--- a/src/client/styles/icons.scss
+++ b/src/client/styles/icons.scss
@@ -3,3 +3,4 @@
 @import '../../../node_modules/css.gg/icons/scss/play-list-search.scss';
 @import '../../../node_modules/css.gg/icons/scss/arrow-left-o.scss';
 @import '../../../node_modules/css.gg/icons/scss/log-off.scss';
+@import '../../../node_modules/css.gg/icons/scss/check.scss';
