--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -6,7 +6,7 @@
 // Set your brand colors
 $blue: #4693c8;
 $purple: #9e4d90;
-$red: #f01234;
+$red: #cd212a;
 
 // Update Bulma's global variables
 // $family-sans-serif: 'Nunito', sans-serif;
