--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,7 +44,7 @@
         <div class="navbar-item">
           <div class="buttons">
 
-            <div id="buttons-user-logged-in" class="is-hidden">
+            <div data-user-session="active">
               <form method="POST" action="/api/user/logout">
                 <button title="End the current user session" class="button">
                   <span>Logout</span>
@@ -52,7 +52,7 @@
               </form>
             </div>
 
-            <div id="buttons-user-logged-out">
+            <div data-user-session="inactive">
               <a href="/signup" class="button is-primary">
                 <strong>Sign up</strong>
               </a>
