feat: add data user session to manage domains

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
           Home
         </a>
 
-        <a class="navbar-item" href="/my-domains">
+        <a data-user-session="active" class="navbar-item" href="/my-domains">
           Manage Domains
         </a>
 
