--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,8 +45,8 @@
           <div class="buttons">
 
             <div class="is-flex is-justify-content-between" data-user-session="active">
-              <a href="/profile" class="button is-primary">
-                Profile
+              <a href="/settings" class="button is-primary">
+                Settings
               </a>
               <form method="POST" action="/api/user/logout">
                 <button title="End the current user session" class="button is-light">
