ref: change wording for domain status

--- a/views/my-domains/notifications.handlebars
+++ b/views/my-domains/notifications.handlebars
@@ -175,13 +175,13 @@
 
           </section>
           <section class="panel-block is-justify-content-space-between">
-            <p>Enable/disable notification sending</p>
+            <p>Enable/disable this domain</p>
             <form method="POST" action="/api/domain/{{domain.id}}/toggle-status">
               <button title="Changes whether your readers receive realtime notifications or not" class="button is-danger is-small">
                 <span class="icon">
                   <i class="gg-log-off"></i>
                 </span>
-                <span>Switch notifications</span>
+                <span>Toggle this domain</span>
               </button>
             </form>
           </section>
